add swagger information about handlers internal currency
